examples/error/invalid_for.rx
function void main() {
  for (e : "str") {
    print(e);
  }
}